@@ -32,7 +32,7 @@
 
         <!-- Quarkus native image settings -->
         <quarkus.package.jar.type>uber-jar</quarkus.package.jar.type>
-        <quarkus.native.additional-build-args>--initialize-at-run-time=org.eclipse.jgit\,dev.tamboui\,org.jline\,org.fusesource</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--initialize-at-run-time=org.eclipse.jgit\,dev.tamboui.tui\,dev.tamboui.toolkit\,dev.tamboui.terminal\,dev.tamboui.capability\,dev.tamboui.error\,dev.tamboui.widget\,dev.tamboui.backend.panama,-H:+ForeignAPISupport,-H:+SharedArenaSupport,--enable-native-access=ALL-UNNAMED</quarkus.native.additional-build-args>
     </properties>
 
     <dependencyManagement>
@@ -89,20 +89,8 @@
         </dependency>
         <dependency>
             <groupId>dev.tamboui</groupId>
-            <artifactId>tamboui-jline3-backend</artifactId>
+            <artifactId>tamboui-panama-backend</artifactId>
             <version>0.1.0</version>
-        </dependency>
-
-        <!-- Required by JLine's uber jar for native image -->
-        <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
-            <version>2.4.1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>5.14.0</version>
         </dependency>
 
         <!-- Test dependencies -->
